--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "publish": "npm run build && npx wrangler pages deploy dist"
   },
   "dependencies": {
+    "@jam-comments/astro": "^2.8.3",
     "astro": "^5.0.5",
-    "dayjs": "^1.11.13"
+    "dayjs": "^1.11.13",
+    "dotenv": "^16.4.7"
   }
 }
