--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "publish": "npm run build && npx wrangler pages deploy dist"
   },
   "dependencies": {
+    "@astrojs/cloudflare": "^12.5.1",
+    "@astrojs/db": "^0.14.12",
+    "@astrojs/node": "^9.2.1",
     "@jam-comments/astro": "^2.8.3",
     "astro": "^5.7.5",
     "dayjs": "^1.11.13",
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.4.7",
+    "react": "^19.1.0"
   }
 }
