--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@astrojs/db": "^0.14.12",
     "@astrojs/node": "^9.2.1",
     "@jam-comments/astro": "^2.8.3",
+    "@supabase/supabase-js": "^2.49.4",
     "astro": "^5.7.5",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
-    "react": "^19.1.0"
+    "react": "^19.1.0",
+    "svelte": "^5.28.2"
   }
 }
