--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@astrojs/cloudflare": "^12.5.1",
     "@astrojs/db": "^0.14.12",
+    "@astrojs/mdx": "^4.2.5",
     "@astrojs/node": "^9.2.1",
     "@jam-comments/astro": "^2.8.3",
     "@supabase/supabase-js": "^2.49.4",
