--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "publish": "npm run build && npx wrangler pages deploy dist"
   },
   "dependencies": {
-    "@astrojs/cloudflare": "12.5.2",
+    "@astrojs/cloudflare": "^12.5.2",
     "@astrojs/db": "0.14.13",
     "@astrojs/mdx": "4.2.6",
     "@astrojs/node": "^9.2.1",
